--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@astrojs/preact": "^4.0.11",
     "@astrojs/tailwind": "^6.0.2",
+    "@preact/compat": "^18.3.1",
+    "@preact/signals": "^2.0.4",
     "@supabase/supabase-js": "^2.49.8",
     "astro": "^5.7.13",
     "preact": "^10.26.6",
-    "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.4"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
