--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install Dependencies
-        run: npm install
+        run: npm ci --no-cache
       - name: Build Astro
         env:
           PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
