--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@preact/compat": "^18.3.1",
     "@preact/signals": "^2.0.4",
+    "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.49.8",
     "astro": "^5.7.13",
     "preact": "^10.26.6",
