--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/preact": "^4.0.11",
+    "@astrojs/react": "^4.3.0",
     "@astrojs/tailwind": "^6.0.2",
-    "@preact/compat": "^18.3.1",
-    "@preact/signals": "^2.0.4",
     "@supabase/ssr": "^0.4.1",
     "@supabase/supabase-js": "^2.49.8",
-    "astro": "^5.7.13",
-    "preact": "^10.26.6",
-    "tailwindcss": "^3.4.17"
+    "@tailwindcss/vite": "^4.1.7",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "astro": "^5.8.0",
+    "framer-motion": "^12.14.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
-    "@types/node": "^22.15.19",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22.15.21",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^9.27.0",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^3.0.24",
     "typescript": "^5.8.3"
   }
 }
