--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,28 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
-    "jsx": "preserve",
-    "jsxImportSource": "preact",
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "~/*": ["*"]
+      "~/*": ["src/*"]
     },
-    "types": ["@astrojs/ts-plugin", "node", "vite/client"]
+    "types": [
+      "@astrojs/ts-plugin",
+      "node",
+      "vite/client"
+    ]
   },
-  "include": ["src/**/*", "astro.config.mjs", "src/env.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*",
+    "astro.config.mjs",
+    "src/env.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
